@@ -13,12 +13,15 @@ import com.examplenewstack.newstack.domain.loan.enums.StatusLoan;
 import com.examplenewstack.newstack.domain.loan.exception.NoLoanFoundByIdException;
 import com.examplenewstack.newstack.domain.loan.exception.NoLoanFoundException;
 import com.examplenewstack.newstack.domain.loan.repository.LoanRepository;
-import jakarta.servlet.http.HttpServletResponse;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.amqp.rabbit.core.RabbitTemplate;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class LoanCrudService {
@@ -35,29 +38,40 @@ public class LoanCrudService {
         this.rabbitTemplate = rabbitTemplate;
     }
 
-    public Loan register(LoanRequest loanRequest, int clientId, int bookId) {
-        Client clientFound = clientRepository.findById(clientId)
-                .orElseThrow();
-        Book bookFound = bookRepository.findById(bookId)
-                .orElseThrow();
+    @Transactional
+    public Loan register(LoanRequest loanRequest) throws Exception {
+        Client clientFound = clientRepository.findById(loanRequest.getClientId())
+                .orElseThrow(() -> new EntityNotFoundException("Cliente não encontrado."));
+        Book bookFound = bookRepository.findById(loanRequest.getBookId())
+                .orElseThrow(() -> new EntityNotFoundException("Livro não encontrado."));
 
         StatusLoan finalStatus;
 
-
         if (bookFound.getDisponibility_quantity() > 0) {
             finalStatus = StatusLoan.EMPRESTADO;
-
+            // Decrementa a quantidade disponível e salva a entidade livro
             bookFound.setDisponibility_quantity(bookFound.getDisponibility_quantity() - 1);
-
             bookRepository.save(bookFound);
-
-
         } else {
-            finalStatus = StatusLoan.RESERVADO;
+            // Lança uma exceção clara se não houver livros para emprestar.
+            throw new Exception("Não há exemplares deste livro disponíveis para empréstimo.");
         }
 
-        Loan newLoan = repository.save(loanRequest.toLoan(clientFound, bookFound, finalStatus));
+        // --- LÓGICA DA DATA DE DEVOLUÇÃO ---
+        LocalDate loanDate = LocalDate.now(); // Data do empréstimo é sempre a data atual
+        LocalDate expectedReturnDate = loanDate.plusDays(loanRequest.getLoanTermDays()); // Calcula a data de devolução
 
+        // Cria a entidade Loan com as datas calculadas
+        Loan loanToSave = new Loan();
+        loanToSave.setClient(clientFound);
+        loanToSave.setBook(bookFound);
+        loanToSave.setStatus(finalStatus);
+        loanToSave.setLoanDate(loanDate.atStartOfDay());
+        loanToSave.setExpectedReturnDate(expectedReturnDate.atStartOfDay());
+
+        Loan newLoan = repository.save(loanToSave);
+
+        // O restante da lógica de notificação permanece o mesmo
         LoanNotificationDTO notificationDTO = new LoanNotificationDTO(
                 clientFound.getName(),
                 clientFound.getEmail(),
@@ -67,99 +81,45 @@ public class LoanCrudService {
                 newLoan.getExpectedReturnDate()
         );
 
-
         String routingKey = "loan.status." + newLoan.getStatus().name().toLowerCase();
-
         rabbitTemplate.convertAndSend(RabbitMQConfig.LOAN_EXCHANGE_NAME, routingKey, notificationDTO);
 
         return newLoan;
-
     }
 
+    @Transactional(readOnly = true)
     public List<LoanResponse> reportAll() {
-        List<Loan> loanFound = repository.findAll();
-        if (loanFound.isEmpty()) {
-            throw new NoLoanFoundException();
-        }
-
-        return loanFound.stream()
-                .map(loan -> new LoanResponse(
-                        loan.getId(),
-                        loan.getLoanDate(),
-                        loan.getExpectedReturnDate(),
-                        loan.getActualReturnDate(),
-                        loan.getStatus().name(),
-                        loan.getClient().getId(),
-                        loan.getBook().getId()))
-                .toList();
+        return repository.findAll().stream()
+                .map(LoanResponse::fromEntity)
+                .collect(Collectors.toList());
     }
 
-    public LoanResponse reportById(int id) {
-        Optional<Loan> loanFound = repository.findById(id);
-        if (!loanFound.isPresent()) {
-            throw new NoLoanFoundByIdException();
+    @Transactional(readOnly = true)
+    public List<LoanResponse> reportByClientId(Integer clientId) {
+        List<Loan> loans = repository.findByClientId(clientId);
+        if (loans.isEmpty()) {
+            throw new NoLoanFoundException("Nenhum empréstimo encontrado para este cliente.");
         }
-
-        return new LoanResponse(
-                loanFound.get().getId(),
-                loanFound.get().getLoanDate(),
-                loanFound.get().getExpectedReturnDate(),
-                loanFound.get().getActualReturnDate(),
-                loanFound.get().getStatus().name(),
-                loanFound.get().getClient().getId(),
-                loanFound.get().getBook().getId()
-        );
+        return loans.stream()
+                .map(LoanResponse::fromEntity) // Usa o novo método de fábrica
+                .collect(Collectors.toList());
     }
 
-    public LoanResponse update(LoanRequest request, int id) {
-        Optional<Loan> loanFound = repository.findById(id);
-        if (!loanFound.isPresent()) {
-            throw new NoLoanFoundByIdException();
-        }
-
-        loanFound.get().setLoanDate(request.loanDate());
-        loanFound.get().setExpectedReturnDate(request.expectedReturnDate());
-
-        return new LoanResponse(
-                loanFound.get().getId(),
-                loanFound.get().getLoanDate(),
-                loanFound.get().getExpectedReturnDate(),
-                loanFound.get().getActualReturnDate(),
-                loanFound.get().getStatus().name(),
-                loanFound.get().getClient().getId(),
-                loanFound.get().getBook().getId()
-        );
-    }
-
-//    public List<LoanResponse> deleteAll() {
-//        List<Loan> loanList = repository.findAll();
-//        if (loanList.isEmpty()) {
-//            throw new NoLoanFoundException();
-//        }
+//    public LoanResponse update(LoanRequest request, int id) {
+//        Optional<Loan> loanFound = repository.findById(id);
 //
-//        for (Loan loan : loanList) {
-//            if (loan.getStatus() == StatusLoan.EMPRESTADO) {
-//                Book books = loan.getBook();
+//        loanFound.setLoanDate();
+//        loanFound.get().setExpectedReturnDate(request.expectedReturnDate());
 //
-//                books.setDisponibility_quantity(books.getDisponibility_quantity() + 1);
-//
-//                bookRepository.save(books);
-//
-//            }
-//        }
-//
-//        repository.deleteAll();
-//
-//        return loanList.stream()
-//                .map(loan -> new LoanResponse(
-//                        loan.getId(),
-//                        loan.getLoanDate(),
-//                        loan.getExpectedReturnDate(),
-//                        loan.getActualReturnDate(),
-//                        loan.getStatus().name(),
-//                        loan.getClient().getId(),
-//                        loan.getBook().getId()))
-//                .toList();
+//        return new LoanResponse(
+//                loanFound.get().getId(),
+//                loanFound.get().getLoanDate(),
+//                loanFound.get().getExpectedReturnDate(),
+//                loanFound.get().getActualReturnDate(),
+//                loanFound.get().getStatus().name(),
+//                loanFound.get().getClient().getId(),
+//                loanFound.get().getBook().getId()
+//        );
 //    }
 
     public List<LoanResponse> deleteById(int id) {
@@ -190,18 +150,8 @@ public class LoanCrudService {
                         loan.getExpectedReturnDate(),
                         loan.getActualReturnDate(),
                         loan.getStatus().name(),
-                        loan.getClient().getId(),
-                        loan.getBook().getId()))
+                        loan.getClient().getName(),
+                        loan.getBook().getTitle()))
                 .toList();
-
-
-    }
-
-    public List<LoanResponse> reportByClientId(Integer clientId) {
-        List<Loan> loans = repository.findByClientId(clientId);
-        if (loans.isEmpty()) {
-            throw new NoLoanFoundException("Nenhum empréstimo encontrado para este cliente.");
-        }
-        return loans.stream().map(LoanResponse::fromEntity).toList();
     }
 }
